🐞 fix z-index issue with backdrop and modal

--- a/hcu-urban-model-builder-client/app/styles/app.scss
+++ b/hcu-urban-model-builder-client/app/styles/app.scss
@@ -688,10 +688,6 @@ fieldset {
   margin-bottom: get-spacer(3);
 }
 
-.modal-backdrop {
-  --bs-backdrop-zindex: 1051;
-}
-
 input:focus {
   outline: none;
   box-shadow: 0 0 0 0.25rem rgba(163, 196, 255, 0.25);
